remove Piranha IT profile as it's unused