@@ -73,7 +73,6 @@
         <test.tomcat.version>11.0.18</test.tomcat.version> <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat -->
         <test.payara-mojarra.version>7.2026.2</test.payara-mojarra.version> <!-- https://mvnrepository.com/artifact/fish.payara.distributions/payara-web -->
         <test.quarkus.version>3.32.3</test.quarkus.version> <!-- https://mvnrepository.com/artifact/io.quarkus.platform/quarkus-bom -->
-        <test.piranha.version>25.6.0</test.piranha.version> <!-- https://mvnrepository.com/artifact/cloud.piranha.arquillian/piranha-arquillian-server -->
 
         <!-- Test impl versions for servletcontainers (Tomcat). -->
         <test.mojarra.version>4.1.6</test.mojarra.version> <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.faces -->
@@ -1138,46 +1137,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <!-- Piranha - Mojarra integration test profile: mvn verify -P piranha-mojarra4 -->
-        <!--
-             Note1: Piranha must be run using JDK 21, so the entire test suite should be run with JDK 21.
-             There's no need to compile OmniFaces with JDK 21. JDK 17 is fine for that.
-
-             Note2: doesn't currently work:
-        -->
-        <profile>
-            <id>piranha-mojarra</id>
-            <dependencies>
-                <dependency>
-                    <groupId>cloud.piranha.arquillian</groupId>
-                    <artifactId>piranha-arquillian-server</artifactId>
-                    <version>${test.piranha.version}</version>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <configuration>
-                            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                            <systemPropertyVariables>
-                                <javaEEServer>piranha-embedded</javaEEServer>
-                                <piranha.rootIsWarName>true</piranha.rootIsWarName>
-                                <war.libraries>
-                                    org.glassfish:jakarta.faces:${test.mojarra.version},
-                                    org.hibernate.validator:hibernate-validator:${test.hibernateValidator.version},
-                                    org.glassfish:jakarta.json:${test.jsonp.version},
-                                    org.glassfish.tyrus:tyrus-container-servlet:${test.tyrus.version}
-                                </war.libraries>
-                            </systemPropertyVariables>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
